[gd_scene load_steps=15 format=3 uid="uid://df74ome2dbw1p"]

[ext_resource type="Script" path="res://menus/game_over_menu.gd" id="1_l4y8u"]
[ext_resource type="Texture2D" uid="uid://bm25d78i8mcxw" path="res://assets/lilac.png" id="1_wytbi"]
[ext_resource type="Texture2D" uid="uid://28baq4reyujs" path="res://assets/purpleclouds.png" id="2_ses4m"]
[ext_resource type="FontFile" uid="uid://bfkw7o0lknp62" path="res://monogram.ttf" id="3_7uiid"]
[ext_resource type="Texture2D" uid="uid://dtyg20gg2behw" path="res://assets/characters/PenguinIdle.png" id="5_d0dqq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38erd"]
bg_color = Color(1, 1, 1, 0.286275)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfd8a"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.929412)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p646s"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.784314)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_soktw"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.929412)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="Theme" id="Theme_vxemb"]
Button/styles/hover = SubResource("StyleBoxFlat_qfd8a")
Button/styles/normal = SubResource("StyleBoxFlat_p646s")
Button/styles/pressed = SubResource("StyleBoxFlat_soktw")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wq8mf"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.929412)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2mog"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.784314)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_khswx"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.929412)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="Theme" id="Theme_ykxxa"]
Button/styles/hover = SubResource("StyleBoxFlat_wq8mf")
Button/styles/normal = SubResource("StyleBoxFlat_q2mog")
Button/styles/pressed = SubResource("StyleBoxFlat_khswx")

[node name="game_over_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l4y8u")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wytbi")

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ses4m")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -297.0
offset_top = 33.0
offset_right = 297.0
offset_bottom = 172.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_fonts/font = ExtResource("3_7uiid")
theme_override_font_sizes/font_size = 175
text = "GAME OVER"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -73.5
offset_right = 122.0
offset_bottom = 227.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_38erd")

[node name="CoinLabel" type="Label" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7uiid")
theme_override_font_sizes/font_size = 40
text = " Coins:"

[node name="NameLabel" type="Label" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7uiid")
theme_override_font_sizes/font_size = 40
text = " Player:"

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/PanelContainer"]
position = Vector2(123, 153)
scale = Vector2(0.0848958, 0.0838541)
texture = ExtResource("5_d0dqq")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -72.0
offset_right = 224.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0

[node name="ReturnButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_vxemb")
theme_override_fonts/font = ExtResource("3_7uiid")
theme_override_font_sizes/font_size = 50
text = " RETURN TO LOBBY "

[node name="HSeparator" type="HSeparator" parent="HBoxContainer2"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_ykxxa")
theme_override_fonts/font = ExtResource("3_7uiid")
theme_override_font_sizes/font_size = 50
text = " QUIT "

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -135.0
offset_right = 112.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.964706, 0.376471, 0.890196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/font = ExtResource("3_7uiid")
theme_override_font_sizes/font_size = 75
text = " WINNER "

[connection signal="pressed" from="HBoxContainer2/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="HBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
